# typescript-demo-app

./: .env.example  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
.github/workflows/: autoblocks_tests.yml
python-demo-app/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
python-demo-app/.github/workflows/: autoblocks_tests.yml
python-demo-app/python_demo_app/: app.py  models.py  prompt_managers.py
python-demo-app/python_demo_app/autoblocks_prompts/: __init__.py
python-demo-app/python_demo_app/autoblocks_prompts/apps/doctor_gpt/: __init__.py  prompts.py
python-demo-app/python_demo_app/autoblocks_prompts/apps/meeting_summarizer/: __init__.py  prompts.py
python-demo-app/python_demo_app/autoblocks_prompts/apps/prompt_demo/: __init__.py  prompts.py
python-demo-app/scripts/: create_dataset.py  create_prompts.py
python-demo-app/tests/: test.py
scripts/: create-dataset.ts  create-prompts.ts  setup.ts
src/: app.ts  instrumentation.ts  models.ts  prompts.ts
tests/: evaluators.ts  test.ts
